removed covid info etc.

--- a/index.html
+++ b/index.html
@@ -71,9 +71,8 @@
 				<nav id="navi" class="upper">
 					<div>
 						<a data-target="#sect-info" id="info">Info</a>
-						<a data-target="#sect-liput" id="tickets">Tickets</a>
+						<a data-target="#sect-liput" id="tickets">Registeration</a>
 						<a data-target="#sect-sijainti" id="location">Location</a>
-						<a data-target="#sect-covid" id="covid">Covid-19</a>
 						<a data-target="#sect-FAQ" id="faq">FAQ</a>
 						<a data-target="#sect-kumppanit" id="partners">Partners</a>
 						<a data-target="#sect-sustainability" id="sustainability">Sustainability</a>
@@ -157,12 +156,7 @@
 				<div class="column single centered">
 					<h1 class="upper">COMPETITOR REGISTRATION</h1>
 					<h2 class="upper">EUROPEAN CUP 2024</h2>
-					<p>Athlete registration is done by purchasing the European Cup ticket and registering to UIAA.</p>
-					<h2 class="upper">FINNISH NATIONAL CHAMPIONSHIPS</h2>
-					<p>There is no separate registration to Finnish National Championships. If you wish to compete in Finnish National Championships (SM-kilpailut), purchase a ticket to the European Championships. We also have some extra instructions for finnish competitiors <a href="./doc/finice2024-sm-ohjeet.pdf">finice2024-sm-ohjeet.pdf</a>(finnish)</p>
-					<h2 class="upper">CLIMBING COMMUNITY</h2>
-					<p>While the event is free of charge for spectators, we have created the ultimate FINICE2024 experience for coaches, family members, friends, and everyone who feels like part of the climbing family by providing you the Climbing Community ticket! By becoming part of the Climbing Community, you will get enhanced spectator ticket. This ticket includes a warm lunch and snacks, and entrance to the closing party.
-					</p>
+					<p>Athlete registration is done by purchasing the European Cup ticket at the venue and registering to UIAA.</p>
 				</div>
 				<br>
 
@@ -185,43 +179,7 @@
 						<div><img src="./_assets/img_carousel/img (13).jpg"></div>
 				</div>
 		</div>
-<br><br>
-			<div class="column-row wrapper narrow">
-				<div class="column single centered">
-					<h1 class="upper">TICKETS</h1>
-						<p class="lead hilite upper" style="padding: 0 0 0.5em;">Athlete registration is done through ticketing system by purchasing a competitor ticket.</p>				</div>	
-			</div>
-			<div id="ticket-types" class="column-row wrapper narrow">
-		
-				<div class="column parts-3">
-					
-					<div class="ticket-text">
-						<h3 class="upper">Competitor</h3>
-						<p>Competitor ticket includes competition fee, lunch at the competition site and entrance to the closing party.</p>
-						<p><strong>Price: 50 &euro;</strong></p>
-					</div>	
-					<p class="upper centered"><a class="button" href="https://finice2024.eventbrite.com" target="_blank">Buy a ticket</a></p>
-				</div>
-				<div class="column parts-3">
-	
-					<div class="ticket-text">
-						<h3 class="upper">Climbing community</h3>
-						<p>Climbing community ticket is for coaches, family members, friends and the climbing community to fully enjoy the Finice2024 and its side events.  With this ticket, you will get lunch at the competition site at saturday and sunday and entrance to the closing party.</p>
-						<p><strong>Price: 50 &euro;</strong></p>
-					</div>	
-					<p class="upper centered"><a class="button" href="https://finice2024.eventbrite.com" target="_blank">Buy a ticket</a></p>
-				</div>
-				<div class="column parts-3">
-	
-					<div class="ticket-text">
-						<h3 class="upper">Organic support T-shirt</h3>
-						<p>This year we have invested in having a sustainable competition. For this reason, we wanted to have fair and organic t-shirts and not order any extra t-shirts. Our graphic artist has made a nice design for us. If you want to have the FINICE2024 t-shirt, you can order it here and receive it when you come to Oulu. Buying this t-shirt, you are also supporting our competition. You get the T-shirt at the FINICE2024 competition site. We thank you for your support!</p>
-						<p><strong>Price: 30 &euro;</strong></p>
-					</div>	
-					<p class="upper centered"><a class="button" href="https://finice2024.eventbrite.com" target="_blank">Buy a ticket</a></p>
-				</div>
 
-			</div>
 		
 		</section>
 
@@ -239,41 +197,6 @@
 				
 			</div>
 
-		</section>
-		<br>
-
-		<section id="sect-covid" class="ce-block" style="padding: 0;">
-			<div class="column-row wrapper narrow">
-					<div class="column single centered">
-						<h1 class="upper">COVID-19 and how to enter Finland</h1>
-					</div>
-					<div class="column single left">
-						<br>
-						<h3>I’m coming from Schengen area</h3>
-						<ul>
-							<li> You need to make sure that you have taken two shots of approved vaccination, see list of <a 
-								href="https://thl.fi/en/web/infectious-diseases-and-vaccinations/what-s-new/coronavirus-covid-19-latest-updates/travel-and-the-coronavirus-pandemic/which-vaccines-are-accepted-at-the-points-of-entry-into-the-country-">approved vaccinations</a></li>
-							<li>You need to have a certificate of vaccination in Finnish, Swedish or English when entering Finland.</li>
-						</ul>
-
-						<h3>I’m coming from outside of Schengen area</h3>
-						<ul>
-							<li>You may need a visa. If you need a visa to enter Finland please inform the competition organization as early as possible, so that we may inform Finnish border authorities about your arrival.</li>
-							<li>Inform us that you are coming to the competition before applying for a visa via email, this will give your application a better chance of succeeding.</li>
-							<li>Email should contain:</li>
-								<ul>
-									<li>Name as stated in your passport </li>
-									<li>Nationality according to your passport</li>
-									<li>Passport number</li>
-									<li>Your role in the competition and itinerary, if possible.</li>
-								</ul>
-							<li>Send email to info@finice2024.com. We will contact the border officials within 2 weeks from receiving your email.</li>
-						</ul>
-						<h3>NOTE</h3>
-						<p>If you do not have two Finland-approved vaccinations, and you are entering outside of Schengen-area, you will need a special permit to enter Finland. Please contact the organisers latest 31st. Jan. so that we can apply for the permit for you! See further details in <a href="https://raja.fi/en/covid19-info">how to enter Finland.</a>
-						</p>
-					</div>
-			</div>		
 		</section>
 		<br>
 		<section id="sect-FAQ" class="ce-block" style="padding: 0;">
