--- a/index.html
+++ b/index.html
@@ -1,29 +1,29 @@
 <!DOCTYPE HTML>
 <html class="no-js" lang="en">
 <head>
-	<title>Ice Climbing European Cup 2024</title>
+	<title>Ice Climbing Continental Cup 2024</title>
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i,700,700i">
 	<meta charset="utf-8">
-	<meta name="Description" content="UIAA Ice Climbing European Cup 2024">
+	<meta name="Description" content="UIAA Ice Climbing Continental Cup 2024">
 	<meta name="viewport" content="width=device-width,initial-scale=1">
 	<link rel="stylesheet" href="./_assets/css/normalize.min.css">
 	<link rel="stylesheet" href="./_assets/css/main.css">
 	<link rel="stylesheet" href="./_assets/css/mq.css">
 	<script src="./_assets/js/lib/modernizr-2.6.1.min.js"></script>
 
-	<meta name="description" content="UIAA Ice Climbing European Cup 2024 and Finnish National Championships in Oulu 3.2.2024">
+	<meta name="description" content="UIAA Ice Climbing Continent Cup 2024 and Finnish National Championships in Oulu 3.2.2024">
 	<meta name="robots" content="index, follow">
 	<link rel="canonical" href="https://www.finice2024.com/">
 	<meta property="og:locale" content="en_gb">
 	<meta property="og:type" content="website">
-	<meta property="og:title" content="UIAA Ice Climbing European Cup 2024 and Finnish National Championships in Oulu 3.2.2024">
-	<meta property="og:description" content="UIAA Ice Climbing European Cup 2024 and Finnish National Championships in Oulu 3.2.2024">
+	<meta property="og:title" content="UIAA Ice Climbing Continental Cup 2024 and Finnish National Championships in Oulu 3.2.2024">
+	<meta property="og:description" content="UIAA Ice Climbing Continental Cup 2024 and Finnish National Championships in Oulu 3.2.2024">
 	<meta property="og:url" content="https://www.finice2024.com/">
 	<meta property="og:site_name" content="Finice 2024">
 	<meta property="og:image" content="https://www.finice2024.com/_assets/img/shareimg.jpg">
 	<meta name="twitter:card" content="summary_large_image">
-	<meta name="twitter:description" content="UIAA Ice Climbing European Cup 2024 and Finnish National Championships in Oulu 3.2.2024">
-	<meta name="twitter:title" content="UIAA Ice Climbing European Cup 2024 and Finnish National Championships in Oulu 3.2.2024">
+	<meta name="twitter:description" content="UIAA Ice Climbing Continental Cup 2024 and Finnish National Championships in Oulu 3.2.2024">
+	<meta name="twitter:title" content="UIAA Ice Climbing Continental Cup 2024 and Finnish National Championships in Oulu 3.2.2024">
 	<meta name="twitter:image" content="https://www.finice2024.com/_assets/img/shareimg.jpg">
 	
 	<!-- faviconit kaikille alustoille-->
@@ -99,7 +99,7 @@
 			<div class="column-row wrapper narrow">
 				<div class="column single centered">
 					<p class="lead hilite " style="padding: 0 0 0.5em;"><a href="http://www.oulunkiipeilyseura.fi/" target="_blank">The Climbing Club of Oulu</a> and <a href="https://www.theuiaa.org/ice-climbing/" target="_blank">UIAA</a> <br>proudly present:
-					</p><p class="lead hilite upper">UIAA Ice Climbing European Cup 2024 and Finnish National Championships in Oulu 3.2.2024</p>
+					</p><p class="lead hilite upper">UIAA Ice Climbing Continental Cup 2024 and Finnish National Championships in Oulu 3.2.2024</p>
 					<br>
 				</div>
 				<br><BR>
@@ -155,8 +155,8 @@
 		
 				<div class="column single centered">
 					<h1 class="upper">COMPETITOR REGISTRATION</h1>
-					<h2 class="upper">EUROPEAN CUP 2024</h2>
-					<p>Athlete registration is done by purchasing the European Cup ticket at the venue and registering to UIAA.</p>
+					<h2 class="upper">Continental CUP 2024</h2>
+					<p>Athlete registration is done by purchasing the Continental Cup ticket at the venue and registering to UIAA.</p>
 				</div>
 				<br>
 
