updated images link.

--- a/index.html
+++ b/index.html
@@ -307,8 +307,8 @@
 				<div class="column single centered">
 			
 					<h1 class="upper">For Media</h1>
-					<h3 class="upper">Pictures from FINICE2022: </h3>
-					<p><a href="https://oskaripajunpaa.kuvat.fi/kuvat/FinIce%202022/" target="_new">FINICE 2022, Oskari Pajunpää</a><br>
+					<h3 class="upper">Pictures from FINICE2023: </h3>
+					<p><a href="https://oulunkiipeilyseura.kuvat.fi/kuvat/FinIce+2023/" target="_new">FINICE 2023, Oskari Pajunpää</a><br>
 					</p>
 
 				</div>
