updated athlete registeration.

--- a/index.html
+++ b/index.html
@@ -156,7 +156,8 @@
 				<div class="column single centered">
 					<h1 class="upper">COMPETITOR REGISTRATION</h1>
 					<h2 class="upper">Continental CUP 2024</h2>
-					<p>Athlete registration is done by purchasing the Continental Cup ticket at the venue and registering to UIAA.</p>
+					<p>Athlete registration is done by purchasing the Continental Cup ticket at the venue and registering to UIAA at <a href="https://uiaa.results.info/#/"  target="_blank">https://uiaa.results.info/#/</a>". You'll 
+					need a vertical life account for registeration. If you don't have one, you can get it <a href="https://docs.google.com/forms/d/e/1FAIpQLScYvD9jUOsRu1n3gCgPhk-psfJ82DOMNseoKT8f0ncjAtHtQA/viewform" target="_blank">here</a></p>
 				</div>
 				<br>
 
