--- a/index.html
+++ b/index.html
@@ -243,6 +243,7 @@
 						<li style="background-image: url(./_assets/img/logo-skil.svg);"><a href="http://www.climbing.fi/skil/" target="_blank">Suomen Kiipeilyliitto SKIL</a></li>
 					</ul>
 					<ul class="logolist medium linklist">
+						<li style="background-image: url(_assets/img/logo-okk.png);"><a href="http://www.oulunkiipeilykeskus.com/" target="_blank">Oulun kiipeilykeskus</a></li>
 					</ul>
 					<ul class="logolist small linklist">
 
