--- a/index.html
+++ b/index.html
@@ -124,7 +124,12 @@
 			<div class="column single centered">
 				<br>
 				<h2>SCHEDULE</h2>
-				<p>TBD</p>
+					<p>Technical meeting online TBD</p>
+					<p>Registration Friday 2nd Feb 18:00-20.00 Oulun Kiipeilykeskus Paakakatu 7</p>
+					<p>Competion from about 8:00 to 19:00 saturday 3rd Feb</p>
+					<p>Outdoor flea market 11:00-15:00  saturday 3rd Feb</p>
+					<p>Award Ceremony about 20:00 Oulun Kiipeilykeskus</p>
+					<p>Fun Höntsä competition sunday 4th Feb at 12:00. Welcome to compete or watch how amateur are doing! Competition registration beforehand, see instructions for <a href="./doc/Finice2024_info.pdf">instructions for athletes PDF</a></p>			
 			</div>
 			<div class="column-row wrapper narrow">
 
@@ -157,7 +162,8 @@
 					<h1 class="upper">COMPETITOR REGISTRATION</h1>
 					<h2 class="upper">Continental CUP 2024</h2>
 					<p>Athlete registration is done by purchasing the Continental Cup ticket at the venue and registering to UIAA at <a href="https://uiaa.results.info/#/"  target="_blank">https://uiaa.results.info/#/</a>". You'll 
-					need a vertical life account for registeration. If you don't have one, you can get it <a href="https://docs.google.com/forms/d/e/1FAIpQLScYvD9jUOsRu1n3gCgPhk-psfJ82DOMNseoKT8f0ncjAtHtQA/viewform" target="_blank">here</a></p>
+					need a vertical life account for registeration. If you don't have one, you can get it <a href="https://docs.google.com/forms/d/e/1FAIpQLScYvD9jUOsRu1n3gCgPhk-psfJ82DOMNseoKT8f0ncjAtHtQA/viewform" target="_blank">here</a>.
+					Read also finice 2024 instructions for athletes: <a href="./doc/Finice2024_info.pdf">instructions for athletes PDF</a></p>
 				</div>
 				<br>
 
@@ -210,14 +216,13 @@
 					<br>
 						<h3>What on earth is Oulu?</h3>
 						<p>The City of Oulu is the capital of northern Finland. The Oulu Region has about 250,000 inhabitants. Transport connections are direct and fast, regardless of the means of transport or direction. All main roads meet in Oulu. Oulu has an international airport and there are about 15 flights to and from Helsinki each day. In addition, you can fly direct from Oulu to Riga, Tampere, Rovaniemi and Kemi-Tornio. Oulu railway station is one of the busiest in Finland. <a href="http://www.visitoulu.fi/en">VisitOulu</a> website provides more information about Oulu and its services, and how to get here. See also <a href="./doc/Oulu%20must%20see%20and%20do.pdf">Oulu what to see and do</a></p>
-						<h3>Do you have any deals for accomodation?</h3>
-						<p>Yes we do! Check out our document about options: <a href="./doc/Options for accommodation.pdf">Options for accomodations</a></p>
 						<h3>What kind of services there are at the competition site?</h3>
-						<p>At the venue, there will be music and other entertainment for the audience. There are heated tents, food market, public toilets, and plenty of parking space.</p>
+						<p>Kiosk selling hot and cold drinks and snacks <br />
+							Terwa Food Truck selling burgers etc <a href="https://terwafoodtruck.fi/" target="_new">https://terwafoodtruck.fi/</a></p>
 						<h3>Will there be transportation between competition site and accommodation/city centre?</h3>
 						<p>This year, there will not be bus transportation between Oulu city centre and the competition site.</p>
 						<h3>I'd like to climb in Oulu! What are the possibilities?</h3>
-						<p><a href="https://www.oulunkiipeilykeskus.com/" target="_new">Oulu Climbing Gym</a> (Oulun kiipeilykeskus) offers two boulder gyms and wide variety of rope action. Korouoma Canyon (approximately 300 km from Oulu) is the best place in Finland to climb ice and is definitely worth a visit. More info from our <a href="https://www.facebook.com/notes/finice2019-oulu-finland/korouoma-canyon-ice-climbing/1749732391988347/" target="_new">Facebook page</a></p>
+						<p><a href="https://www.oulunkiipeilykeskus.com/" target="_new">Oulu Climbing Gym</a> (Oulun kiipeilykeskus) offers two boulder gyms and wide variety of rope action. You can also go boulderin indoors at: <a href="https://kaamosclimbing.fi/en/" target="_new">Kaamos Climbing Gym</a>. Korouoma Canyon (approximately 300 km from Oulu) is the best place in Finland to climb ice and is definitely worth a visit. </p>
 					</div>
 					
 			</div>
