added info for Finnish Championships

--- a/index.html
+++ b/index.html
@@ -164,6 +164,7 @@
 					<p>Athlete registration is done by purchasing the Continental Cup ticket at the venue and registering to UIAA at <a href="https://uiaa.results.info/#/"  target="_blank">https://uiaa.results.info/#/</a>". You'll 
 					need a vertical life account for registeration. If you don't have one, you can get it <a href="https://docs.google.com/forms/d/e/1FAIpQLScYvD9jUOsRu1n3gCgPhk-psfJ82DOMNseoKT8f0ncjAtHtQA/viewform" target="_blank">here</a>.
 					Read also finice 2024 instructions for athletes: <a href="./doc/Finice2024_info.pdf">instructions for athletes PDF</a></p>
+					<p><b>Registation to Finnish Championships:</b> See our instructions in finnish <a href="./doc/Finice2024_info_fi.pdf">sm-kisailijoiden ohjeet</a></p>
 				</div>
 				<br>
 
