added janneniska to partners

--- a/index.html
+++ b/index.html
@@ -250,6 +250,7 @@
 					</ul>
 					<ul class="logolist medium linklist">
 						<li style="background-image: url(_assets/img/logo-okk.png);"><a href="http://www.oulunkiipeilykeskus.com/" target="_blank">Oulun kiipeilykeskus</a></li>
+						<li style="background-image: url(_assets/img/logo-janneniska.png);"><a href="https://www.janneniska.com/" target="_blank">Janneniska</a></li>
 					</ul>
 					<ul class="logolist small linklist">
 
