updated information about strike.

--- a/index.html
+++ b/index.html
@@ -105,6 +105,7 @@
 				<br><BR>
 				<div class="column parts-2">
 					<div class="column single left">
+						<p><b>Competitors please note: </b>There is a threat of strike in Finland for 1st and 2nd of February that will impact or close airports. Please consult your airline company. The the strike also impact also busses and trains (friday only).</p>
 						<p>The Finice 2024 competition will be held on February 3. Finice2024 is part of the continental cup. In the competitions, you can compete in the adult and youth series, at the same time we organize the Finnish championship competitions and we also aim to organize a fun series for climbers of all levels.</p>
 						<p>In the tight one-day competition, you get to see wild performances and sensitive moments. The day starts with the qualifiers and during the afternoon and evening the top names in Finland and the world are left to show their skills and strength. The audience gets to see how many people climb to the top and how spectacular drops and flying picks are seen in these games.</p>
 						<p>At the competition site, there are heated tents, public toilets, and plenty of parking space.</p>
