added some icesrew sharpening to program

--- a/index.html
+++ b/index.html
@@ -130,7 +130,8 @@
 					<p>Competion from about 8:00 to 19:00 saturday 3rd Feb</p>
 					<p>Outdoor flea market 11:00-15:00  saturday 3rd Feb</p>
 					<p>Award Ceremony about 20:00 Oulun Kiipeilykeskus</p>
-					<p>Fun Höntsä competition sunday 4th Feb at 12:00. Welcome to compete or watch how amateur are doing! Competition registration beforehand, see instructions for <a href="./doc/Finice2024_info.pdf">instructions for athletes PDF</a></p>			
+					<p>Fun Höntsä competition sunday 4th Feb at 12:00. Welcome to compete or watch how amateur are doing! Competition registration beforehand, see instructions for <a href="./doc/Finice2024_info.pdf">instructions for athletes PDF</a></p>
+					<p>ice screw sharpening with cnc machine by Jaakko Lehto. Competition discount 9€/screw!</p>			
 			</div>
 			<div class="column-row wrapper narrow">
 
