added partners to the list

--- a/index.html
+++ b/index.html
@@ -253,6 +253,9 @@
 					<ul class="logolist medium linklist">
 						<li style="background-image: url(_assets/img/logo-okk.png);"><a href="http://www.oulunkiipeilykeskus.com/" target="_blank">Oulun kiipeilykeskus</a></li>
 						<li style="background-image: url(_assets/img/logo-janneniska.png);"><a href="https://www.janneniska.com/" target="_blank">Janneniska</a></li>
+						<li style="background-image: url(_assets/img/logo-camu.png);"><a href="https://camu.fi/" target="_blank">Camu</a></li>
+						<li style="background-image: url(_assets/img/logo-petzl.png);"><a href="https://www.petzl.com/" target="_blank">Petzl</a></li>
+						<li style="background-image: url(_assets/img/logo-oulu.png);"><a href="https://www.ouka.fi/" target="_blank">City of Oulu</a></li>
 					</ul>
 					<ul class="logolist small linklist">
 
