added a link for rep-ly

--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
 						<li style="background-image: url(_assets/img/logo-camu.jpg);"><a href="https://camu.fi/" target="_blank">Camu</a></li>
 						<li style="background-image: url(_assets/img/logo-petzl.png);"><a href="https://www.petzl.com/" target="_blank">Petzl</a></li>
 						<li style="background-image: url(_assets/img/logo-oulu.png);"><a href="https://www.ouka.fi/" target="_blank">City of Oulu</a></li>
-						<li style="background-image: url(_assets/img/logo-reply.png);">Re-ply</li>
+						<li style="background-image: url(_assets/img/logo-reply.png);"><a href="https://www.re-ply.cz/en" target="_blank">Re-ply</a></li>
 					</ul>
 					<ul class="logolist small linklist">
 
