added purewaste to partners

--- a/index.html
+++ b/index.html
@@ -254,6 +254,7 @@
 						<li style="background-image: url(_assets/img/logo-okk.png);"><a href="http://www.oulunkiipeilykeskus.com/" target="_blank">Oulun kiipeilykeskus</a></li>
 						<li style="background-image: url(_assets/img/logo-janneniska.png);"><a href="https://www.janneniska.com/" target="_blank">Janneniska</a></li>
 						<li style="background-image: url(_assets/img/logo-camu.jpg);"><a href="https://camu.fi/" target="_blank">Camu</a></li>
+						<li style="background-image: url(_assets/img/logo-purewaste.png);"><a href="https://purewaste.com/" target="_blank">Pure Waste</a></li>
 						<li style="background-image: url(_assets/img/logo-petzl.png);"><a href="https://www.petzl.com/" target="_blank">Petzl</a></li>
 						<li style="background-image: url(_assets/img/logo-oulu.png);"><a href="https://www.ouka.fi/" target="_blank">City of Oulu</a></li>
 						<li style="background-image: url(_assets/img/logo-reply.png);"><a href="https://www.re-ply.cz/en" target="_blank">Re-ply</a></li>
