--- a/index.html
+++ b/index.html
@@ -258,6 +258,8 @@
 						<li style="background-image: url(_assets/img/logo-petzl.png);"><a href="https://www.petzl.com/" target="_blank">Petzl</a></li>
 						<li style="background-image: url(_assets/img/logo-oulu.png);"><a href="https://www.ouka.fi/" target="_blank">City of Oulu</a></li>
 						<li style="background-image: url(_assets/img/logo-reply.png);"><a href="https://www.re-ply.cz/en" target="_blank">Re-ply</a></li>
+						<li style="background-image: url(_assets/img/logo-tuohino.png);"><a href="https://tuohino.fi/" target="_blank">Tuohinon tila</a></li>
+
 					</ul>
 					<ul class="logolist small linklist">
 
