--- a/index.html
+++ b/index.html
@@ -123,13 +123,50 @@
 				
 			</div>
 			<div class="column single centered">
-				<br>
 				<h2>SCHEDULE</h2>
-					<p>Technical meeting online TBD</p>
-					<p>Registration Friday 2nd Feb 18:00-20.00 Oulun Kiipeilykeskus Paakakatu 7</p>
-					<p>Competion from about 8:00 to 19:00 saturday 3rd Feb</p>
-					<p>Outdoor flea market 11:00-15:00  saturday 3rd Feb</p>
-					<p>Award Ceremony about 20:00 Oulun Kiipeilykeskus</p>
+			</div>					
+			<div class="column single left">
+				<table>
+					<tbody>
+					<tr>
+						<th>Friday, Feb 2nd</td>
+					</tr>
+					<tr>
+						<td class="main">
+							<table>
+							<tbody>
+								<tr><td class="left">18.00 - 20.00</td><td class="right">Registation at Oulu Climbin Center</td></tr>
+							</tbody>
+							</table>
+						</td>
+
+					</tr>							
+					<tr>
+						<th>Saturday, Feb 3rd</td>
+					</tr>
+					<tr>
+						<td class="main">
+							<table>
+							<tbody>
+								<tr><td class="left">08:00 - 08:30</td><td class="right">Warmup Zone and Registeration open</td></tr>
+								<tr><td class="left">08:45 - 09:00</td><td class="right">Technical meeting</td></tr>
+								<tr><td class="left">09:00</td><td class="right">Lead Qualification U16 R1</td></tr>
+								<tr><td class="left">09:30 - 14.00 </td><td class="right">Lead Qualification U18, U20, Adults</td></tr>
+								<tr><td class="left">10.15</td><td class="right">Lead Qualification U16 R2</td></tr>
+								<tr><td class="left">11.00 - 15.00</td><td class="right">Outdoor flea market</td></tr>
+								<tr><td class="left">14:45 - 15:00</td><td class="right">Isolation Zone Open/Close - U16, U18, U20, Adults</td></tr>
+								<tr><td class="left">16.30 - 16.45</td><td class="right">Route Observation</td></tr>
+								<tr><td class="left">16.45 - 19.00</td><td class="right">Lead Finals - U16, U18, U20, Adults</td></tr>
+								<tr><td class="left">20.00</td><td class="right">Continental Cup Award Ceremony, Finnish Champpinships Awards Ceremony at Oulu Climbin Center</td></tr>
+							</tbody>
+							</table>
+						</td>
+
+					</tr>
+					</tbody>
+				</table>
+			</div>
+			<div class="column single centered">
 					<p>Fun Höntsä competition sunday 4th Feb at 12:00. Welcome to compete or watch how amateur are doing! Competition registration beforehand, see instructions for <a href="./doc/Finice2024_info.pdf">instructions for athletes PDF</a></p>
 					<p>ice screw sharpening with cnc machine by Jaakko Lehto. Competition discount 9€/screw!</p>			
 			</div>
@@ -259,7 +296,6 @@
 						<li style="background-image: url(_assets/img/logo-oulu.png);"><a href="https://www.ouka.fi/" target="_blank">City of Oulu</a></li>
 						<li style="background-image: url(_assets/img/logo-reply.png);"><a href="https://www.re-ply.cz/en" target="_blank">Re-ply</a></li>
 						<li style="background-image: url(_assets/img/logo-tuohino.png);"><a href="https://tuohino.fi/" target="_blank">Tuohinon tila</a></li>
-
 					</ul>
 					<ul class="logolist small linklist">
 
