added startlist to the web

--- a/index.html
+++ b/index.html
@@ -167,6 +167,7 @@
 				</table>
 			</div>
 			<div class="column single centered">
+					<p>Men startlist can be found at <a href="./doc/startlist-men.pdf">startlist-men</a> and women startlist can be found at <a href="./doc/startlist-women.pdf">startlist-women</a></p>
 					<p>Fun Höntsä competition sunday 4th Feb at 12:00. Welcome to compete or watch how amateur are doing! Competition registration beforehand, see instructions for <a href="./doc/Finice2024_info.pdf">instructions for athletes PDF</a></p>
 					<p>ice screw sharpening with cnc machine by Jaakko Lehto. Competition discount 9€/screw!</p>
 					<p>Watch the Finals stream in here: <br>
