--- a/index.html
+++ b/index.html
@@ -174,8 +174,10 @@
 					 U16 qualification 2: <a href="https://youtu.be/KJQ5SCs4cf4">https://youtu.be/KJQ5SCs4cf4</a></p>
 					<p>Fun Höntsä competition sunday 4th Feb at 12:00. Welcome to compete or watch how amateur are doing! Competition registration beforehand, see instructions for <a href="./doc/Finice2024_info.pdf">instructions for athletes PDF</a></p>
 					<p>ice screw sharpening with cnc machine by Jaakko Lehto. Competition discount 9€/screw!</p>
-					<p>Watch the Finals stream in here: <br>
-						<iframe width="560" height="315" src="https://www.youtube.com/embed/O52OFdpYB50?si=iQ4JJ43v5jTrVgDM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></p>			
+					<h3>Qualifications Stream</h3>
+					<iframe width="560" height="315" src="https://www.youtube.com/embed/pPShcg4GYPQ?si=Puanv3Ea7MArjBEB" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+					<h3>Finals Streams <h3>
+					<iframe width="560" height="315" src="https://www.youtube.com/embed/O52OFdpYB50?si=iQ4JJ43v5jTrVgDM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></p>			
 			</div>
 			<div class="column-row wrapper narrow">
 
