--- a/index.html
+++ b/index.html
@@ -169,7 +169,10 @@
 			<div class="column single centered">
 					<p>Fun Höntsä competition sunday 4th Feb at 12:00. Welcome to compete or watch how amateur are doing! Competition registration beforehand, see instructions for <a href="./doc/Finice2024_info.pdf">instructions for athletes PDF</a></p>
 					<p>ice screw sharpening with cnc machine by Jaakko Lehto. Competition discount 9€/screw!</p>
-					<h3>Finals Streams <h3>
+					<h3>Results</h3>
+					<p><a href="https://uiaa.results.info/#/event/82">UIAA Ice Climbing Continental Open - Oulu Finland</a><br/>
+					<a href="https://uiaa.results.info/#/event/89">UIAA Ice Climbing Continental Youth Open - Oulu, Finland</a></p>
+					<h3>Finals Stream<h3>
 					<iframe width="560" height="315" src="https://www.youtube.com/embed/O52OFdpYB50?si=iQ4JJ43v5jTrVgDM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></p>			
 			</div>
 			<div class="column-row wrapper narrow">
