--- a/index.html
+++ b/index.html
@@ -366,8 +366,11 @@
 				<div class="column single centered">
 			
 					<h1 class="upper">For Media</h1>
-					<h3 class="upper">Pictures from FINICE2023: </h3>
-					<p><a href="https://oulunkiipeilyseura.kuvat.fi/kuvat/FinIce+2023/" target="_new">FINICE 2023, Oskari Pajunpää</a><br>
+					<h3 class="upper">Pictures from FINICE2024: </h3>
+					<p><a href="https://oulunkiipeilyseura.kuvat.fi/kuvat/FinIce+2024/Saturday/" target="_new">FINICE 2024</a><br>
+					<h3>Results</h3>
+					<a href="https://uiaa.results.info/#/event/82">UIAA Ice Climbing Continental Open - Oulu Finland</a><br/>
+					<a href="https://uiaa.results.info/#/event/89">UIAA Ice Climbing Continental Youth Open - Oulu, Finland</a>
 					</p>
 
 				</div>
